docs/v1.14.x/api/triggerable.md
---
layout: page
title: Triggerable
---

{% raw %}
### Methods


<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

#### Table of Contents

-   [triggerable](#triggerable)

### triggerable

Triggers event on element matched by selector.

**Parameters**

-   `event` **[string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String)** Event to be triggered
-   `selector` **[string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String)** CSS selector of the element on which the event will be triggered
-   `userOptions`   (optional, default `{}`)
-   `options` **[Object](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object)** Additional options
    -   `options.scope` **[string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String)** Nests provided scope within parent's scope
    -   `options.at` **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Number)** Reduce the set of matched elements to the one at the specified index
    -   `options.resetScope` **[boolean](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Boolean)** Ignore parent scope
    -   `options.testContainer` **[string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String)** Context where to search elements in the DOM
    -   `options.eventProperties` **[string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String)** Event properties that will be passed to trigger function

**Examples**

```javascript
// <input class="name">
// <input class="email">

import { create, triggerable } from 'ember-cli-page-object';

const page = create({
  enter: triggerable('keypress', '.name', { eventProperties: { keyCode: 13 } })
});

// triggers keypress using enter key on element with selector '.name'
page.enter();
```

```javascript
// <input class="name">
// <input class="email">

import { create, triggerable } from 'ember-cli-page-object';

const page = create({
  keydown: triggerable('keypress', '.name')
});

// triggers keypress using enter key on element with selector '.name'
page.keydown({ which: 13 });
```

```javascript
// <div class="scope">
//   <input class="name">
// </div>
// <input class="email">

import { create, triggerable } from 'ember-cli-page-object';

const page = create({
  keydown: triggerable('keypress', '.name', { scope: '.scope' })
});

// triggers keypress using enter key on element with selector '.name'
page.keydown({ which: 13 });
```

```javascript
// <div class="scope">
//   <input class="name">
// </div>
// <input class="email">

import { create, triggerable } from 'ember-cli-page-object';

const page = create({
  scope: '.scope',
  keydown: triggerable('keypress', '.name')
});

// triggers keypress using enter key on element with selector '.name'
page.keydown({ which: 13 });
```

Returns **Descriptor** 
{% endraw %}